# mcp-client

./: README.md  client.py  main.py  pyproject.toml
frontend/: package.json
frontend/src/: App.js  ChatInterface.css  ChatInterface.js
server/: github.py  weather.py
